tests/ui/issues/issue-58734.edition2021.stderr
error[E0782]: expected a type, found a trait
  --> $DIR/issue-58734.rs:23:5
   |
LL |     Trait::nonexistent(());
   |     ^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL |     <dyn Trait>::nonexistent(());
   |     ++++      +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
